# ppt-workflow

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: test.yml
examples/: company_template.pptx  make_company_template.py  quickstart.py  slides_template.json
examples/demo_input/: audience.txt  slides.json  theme.txt
examples/demo_input/chart_data/: bottleneck.json
examples/sample_deck/: template_content.json
examples/sample_deck/input/: scenario.txt
examples/sample_deck/input/chart_data/: efficiency.json
scripts/: __init__.py  orchestrate.py
skills/: __init__.py
skills/academic-pptx/: SKILL.md
skills/academic-pptx/scripts/: build_academic_outline.py
skills/chart-slide-maker/: SKILL.md
skills/chart-slide-maker/scripts/: chart_to_pptx.py  csv_to_chart_spec.py  render_chart.py
skills/deck-review-publisher/: SKILL.md
skills/deck-review-publisher/scripts/: make_thumbnail_grid.py  qa_check.py  render_thumbnails.py  soffice_convert.py
skills/deck-storyline-designer/: SKILL.md
skills/deck-storyline-designer/scripts/: build_storyline.py
skills/markdown-to-slides/: SKILL.md
skills/markdown-to-slides/scripts/: md_to_pptx.py
skills/markdown-to-slides/templates/: template_profile.json
skills/ppt-outline-builder/: SKILL.md
skills/ppt-outline-builder/scripts/: build_outline.py
skills/ppt-outline-builder/templates/: outline_template.md
skills/ppt-workflow-orchestrator/: SKILL.md
skills/pptx-generator/: SKILL.md
skills/pptx-generator/scripts/: extract_text.py  merge_pptx.py  spec_to_pptx.py  split_pptx.py  validate_spec.py
skills/shared/: __init__.py  cli.py  fonts.py  logging_config.py  types.py  utils.py
skills/speaker-notes-writer/: SKILL.md
skills/speaker-notes-writer/scripts/: estimate_duration.py  notes_to_pptx.py
skills/speaker-notes-writer/templates/: speaker_notes_template.md
skills/template-layout-deck/: SKILL.md
skills/template-layout-deck/scripts/: analyze_template.py  apply_template.py
skills/visual-slide-designer/: SKILL.md
skills/visual-slide-designer/scripts/: build_visual.py  html_to_png.py  html_to_png_pillow.py
tests/: conftest.py  test_e2e.py  test_fonts.py  test_types.py  test_utils.py
