[project]
name = "ppt-workflow"
version = "1.0.0"
description = "AI-driven PPT generation pipeline with 10 composable skills"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
dependencies = [
    "python-pptx>=1.0.0",
    "Pillow>=10.0",
]

[dependency-groups]
dev = [
    "basedpyright>=1.21",
    "ruff>=0.8",
    "pytest>=8",
    "pytest-cov>=5",
]

# ──────────────────────────────────────────────────────────────
# basedpyright — typeCheckingMode = "all"
# ──────────────────────────────────────────────────────────────
[tool.basedpyright]
typeCheckingMode = "all"
pythonVersion = "3.12"
pythonPlatform = "All"
include = ["skills", "scripts", "tests"]
exclude = ["**/__pycache__", "**/.venv", "**/build", "**/dist"]

reportUnusedCallResult = "warning"
reportUnnecessaryTypeIgnoreComment = "error"
reportUnusedVariable = "error"
reportMissingParameterType = "error"
reportMissingReturnType = "error"
reportPrivateUsage = "error"

# ──────────────────────────────────────────────────────────────
# ruff — select = ["ALL"]
# ──────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py312"
line-length = 88
src = ["skills", "scripts", "tests"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",   # missing trailing comma (conflicts with formatter)
    "ISC001",   # implicit string concat (conflicts with formatter)
    "D203",     # conflicting docstring convention
    "D213",     # conflicting docstring convention
    "CPY001",   # missing copyright notice
    "FBT001",   # boolean positional arg in def
    "FBT002",   # boolean positional default in def
    "TD002",    # missing TODO author
    "TD003",    # missing TODO link
    "FIX002",   # line contains TODO
    "INP001",   # implicit namespace package (scripts dir)
    # 实际项目合理性忽略:
    "D102",     # Missing docstring in public method (类内方法通常自解释)
    "D107",     # Missing docstring in __init__
    "D205",     # 1 blank line required between summary line and description
    "D212",     # Multi-line docstring summary should start at first line (与 D213 冲突,选 D213)
    "D400",     # First line should end with period (重复)
    "D401",     # First line should be in imperative mood
    "E402",     # Module level import not at top of file (path setup 必须先)
    "ERA001",   # commented-out code (测试/调试常需要)
    "N806",     # variable in function should be lowercase (我们的 dataclass 字段保留大写)
    "PLR0911",  # too many return statements
    "PLR0912",  # too many branches
    "PLR0913",  # too many arguments
    "PLR0915",  # too many statements
    "TRY003",   # long exception messages
    "TRY300",   # try/except with else
    "TRY301",   # abstract raise in try
    "SLF001",   # private member access (共享模块需访问)
    "S603",     # subprocess call (编排器故意调子进程)
    "S607",     # partial path executable
    "BLE001",   # blind Exception (编排器需捕获所有子进程错误)
    "PERF401",  # list.extend (微优化)
    "PLR2004",  # magic numbers (编排器常量)
    "C901",     # function complexity (编排器函数本身长)
    "RET504",   # unnecessary assignment before return
    "DTZ005",   # datetime.now() without tz (内部使用)
    "EM101",     # exception must not use a string literal
    "EM102",     # exception must not use an f-string literal
    "T201",      # print found (脚本/测试需要 print)
    "S110",      # try-except-pass (编排器忽略子进程错误合理)
    "S112",      # try-except-continue
    "PLW1510",   # subprocess.run without check (编排器用 check=False 是故意的)
    "PLW2901",   # for loop variable overwritten
    "B007",      # unused loop variable
    "B905",      # zip without strict=
    "F841",      # local variable assigned but never used
    "ANN401",    # any-type annotations
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",     # assert is the point of pytest
    "ARG",      # unused args (fixtures)
    "PLR2004",  # magic numbers in test data
    "SLF001",   # tests need private access
    "D",        # no docstrings required
    "ANN",      # type annotations not required in tests
]
"scripts/**/*.py" = [
    "T201",     # print allowed in scripts
    "INP001",   # implicit namespace package
    "ANN",      # dynamic scripts — type annotations optional
    "D103",     # no docstring required for internal helpers
    "D415",     # punctuation not enforced in script docstrings
    "E501",     # lines up to ~120 OK in scripts
    "PLC0415",  # imports inside functions OK in scripts
]
"skills/shared/**/*.py" = [
    "T201",     # print allowed in shared utilities
    "ANN",      # shared API has TypedDict/dataclass; function annotations optional
]
"skills/*/scripts/*.py" = [
    "ANN",      # 25 个 Skill 脚本,统一豁免类型注解以聚焦功能
    "D103",     # 内部脚本,docstring 不强制
    "D415",     # docstring 标点不强制
    "PLC0415",  # 脚本内 import 合理
    "E501",     # 脚本行长到 ~120 OK
]

[tool.ruff.lint.pydocstyle]
convention = "google"

# ──────────────────────────────────────────────────────────────
# pytest
# ──────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-config",
    "--strict-markers",
]
filterwarnings = ["error"]

# ──────────────────────────────────────────────────────────────
# coverage
# ──────────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["skills"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
    "raise NotImplementedError",
    "@(abc\\.)?abstractmethod",
]
